zig-pkg/zig-0.0.0-Fp4XJG_h5A3OLpPXqVTJ1DRl3lZhqHp_fClrI7MUVjU_/test/cases/compile_errors/union_backed_by_enum_backed_by_comptime_int.zig
const U = union(enum(comptime_int)) { a: u32 };
comptime {
    const u: U = .{ .a = 123 };
    _ = u;
}

// error
//
// :1:22: error: expected integer tag type, found 'comptime_int'
